plugins {
	id 'java'
}

repositories {
	maven {
		url = 'https://repo.runelite.net'
		content {
			includeGroupByRegex("net\\.runelite.*")
		}
	}
	mavenCentral()
}

def runeLiteVersion = '1.12.19'
def pluginMainClass = 'com.songmute.SongMutePluginLauncher'

dependencies {
	compileOnly "net.runelite:client:${runeLiteVersion}"

	testImplementation 'junit:junit:4.13.2'
	testImplementation "net.runelite:client:${runeLiteVersion}"
	testImplementation "net.runelite:jshell:${runeLiteVersion}"
}

group = 'com.songmute'
version = '1.0-SNAPSHOT'

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
	options.release.set(11)
}

tasks.withType(Test).configureEach {
	useJUnit()
}

tasks.register('run', JavaExec) {
	dependsOn testClasses
	classpath = sourceSets.test.runtimeClasspath
	mainClass = pluginMainClass

	jvmArgs "-ea", "--add-opens=java.base/java.lang=ALL-UNNAMED"
	args "--developer-mode", "--debug"
}

tasks.register('shadowJar', Jar) {
	dependsOn classes
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
	from sourceSets.main.output
	from {
		configurations.runtimeClasspath.collect { file ->
			file.isDirectory() ? file : zipTree(file)
		}
	}

	exclude 'META-INF/INDEX.LIST'
	exclude 'META-INF/*.SF'
	exclude 'META-INF/*.DSA'
	exclude 'META-INF/*.RSA'
	exclude '**/module-info.class'

	group = BasePlugin.BUILD_GROUP
	archiveClassifier.set('plugin')
}
